# scp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  setup.sh  test-setup.sh  test.sh
scp-3gpp-docs/: 29570-j10.docx  TS29570_Nscp_EventExposure.yaml
src/: config.rs  db.rs  main.rs
src/clients/: mod.rs  nrf.rs
src/handlers/: health.rs  mod.rs  notification.rs  proxy.rs
src/routes/: mod.rs
src/services/: load_balancer.rs
src/types/: app_state.rs  error.rs  mod.rs  nf_profile.rs  nrf_notification.rs  problem_details.rs  retry_config.rs
src/utils/: mod.rs  retry.rs
